GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

============================================================

PyKota NEWS :

    - 1.19alpha14 :
    
        - Heavy CPU usage is now completely fixed it seems, by 
          introducing some 0.01 second sleeping when nothing to do.
          
        - Pre-computation of the job's size is now only
          done when enforcement is "STRICT", this saves
          CPU for people who don't want to use this new
          feature.
          
        - New 'enforcement' directive which accepts either
          STRICT or LAXIST. See sample configuration file
          for details.
          
    - 1.19alpha13 :
    
        - Get back to an old version of the polling loop which
          worked fine, but non-optimally. Will be optimized
          as time permits.
          
    - 1.19alpha12 :
    
        - Job's size is now precomputed unconditionnally using 
          the generic PDL analyzer.
          NB : This value is not yet used to pre-allow/deny the
          job.
        
    - 1.19alpha11 :
    
        - The pykota filter is now completely deprecated and
          can't be used anymore. LPRng users MUST download 
          an older version of PyKota. CUPS users MUST use
          cupspykota. Better support for LPRng will come
          in the near future.
          
    - 1.19alpha10 :
    
        - pykotme now uses generic PDL Analyzer directly instead
          of spawning a new process.
          
        - Improvements to generic PDL Analyzer.
        
        - 25% Speedup in PCL parser. Getting more of the Python version
          will probably be difficult, since the completely table driven 
          parser I wrote is slower than the original algorithm. Then,